--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <div id="app">
       <h1>API WPP 'SMOKE'</h1>
       <img src="" alt="QR Code" id="qrcode" />
-      <h3>Logs:</h3>
+      <h3>LOGS:</h3>
       <ul class="logs"></ul>
     </div>
 
